feat(vanadium): initialize Vulkan